# McPhD

./: .gitattributes  .gitignore  .hgignore  .hgtags  COPYRIGHT  Main.hs  Makefile  NullStreaming.hs  README.md  Space.hs  TestProblem.hs  parallel-particle-mc.cabal
Events/: Event.hs
Mesh/: Classes.hs  Meshes.hs  Null.hs  NullMesh.hs  Simple.hs
Particle/: Null.hs  Simple.hs
Particles/: Classes.hs  Data.hs  Limited.hs  Null.hs  Simple.hs
basic/: README.md  README.txt  basic.cabal
basic/.hpc/: Constants.mix  DataTypes.mix  Main.mix
basic/bench/: bench-hist.hs  bench-lfg.hs  bench.cabal
basic/data/: data_fields  p.1  p.2  p.3  p.4  p.5  p.6  p.7
basic/src/: BH.hs  Cart1D.hs  Cart3D.hs  Cell.hs  Collision.hs  Constants.hs  DataTypes.hs  Event.hs  FileInputCF.hs  Geometry.hs  Histogram.hs  MC.hs  MPIFull.hs  MPIStub.hs  MPISwitch.hs  Main-1000.hs  Main.hs  Material.hs  Mesh.hs  MeshBase.hs  Numerical.hs  Opacity.hs  PRNG.hs  Particle.hs  Partition.hs  Philo2.hs  Physical.hs  Search.hs  Sigma_HBFC.hs  SoftEquiv.hs  Source.hs  Sphere1D.hs  Tally.hs  TallyIM.hs  TallyV.hs  TestSuite.hs  TryNSave.hs  Utils.hs
basic/src-main/: BH-philox-MPI.hs  BH-philox.hs  BH.hs  RunParticles.hs
basic/src/System/Random/: LFG.hs
basic/src/System/Random/LFG/: Pure.hs
basic/src/Test/: Arbitraries.hs  Collision_Test.hs  Geometry_Test.hs  MC_test.hs  Mesh_Test.hs  Mesh_test.hs  Opacity_Test.hs  Opacity_test.hs  Source_Test.hs  Sphere1D_test.hs  TestingTools.hs
basic/tests/: LFGTest.hs  TestSuite.hs
basic/tests/Test/: Arbitraries.hs  Collision_Test.hs  Geometry_Test.hs  Histogram_Test.hs  MC_test.hs  Mesh_Test.hs  Opacity_Test.hs  Partition_Test.hs  Philox_Test.hs  PickEvent_Test.hs  Source_Test.hs  Source_Test_Cases.hs  Sphere1D_d_to_b_TestCases.hs  Stream_Test.hs  Tally_Test.hs  TestingTools.hs  Utils_Test.hs
basic/utils/: ParseBH.hs  README  README.md  README.txt  SummarizeBH.hs  SummarizeGC.hs  buildBunches.hs  test-seed.hs  testChunks.hs  testN-mpi-strong.hs  testN-weak.hs  testN.hs
documents/: progress_report_June2011
framework/: Setup.hs
framework/src/: MonteCarlo.hs  Properties.hs  TestSuite.hs
framework/src/Mesh/: Classes.hs  Spherical.hs
framework/src/Mesh/Test/: Mesh_test.hs
framework/src/MiniApp/: Events.hs  Model.hs  Particle.hs  Physics.hs
framework/src/Particle/: IndexedParticle.hs
framework/src/Particle/Test/: Particles_arbitrary.hs
framework/src/Space/: Classes.hs
framework/src/Space/Test/: Space_arbitrary.hs  Space_test.hs
framework/src/SphericalApp/: Main.hs  Physics.hs  Tally.hs
framework/src/Test/: NormalizedValues_test.hs  Numeric_arbitrary.hs  RandomNumbers_arbitrary.hs  Stream_test.hs
framework/src/Utils/: Combinators.hs  Finders.hs
framework/src/attic/: RandomStreaming_test.hs  SimpleCartesian.hs
framework/src/attic/Particles/: BasicParticle.hs
framework/src/scratch/: Status.hs  arrays.hs
sandbox/: Classes.hs  Limited.hs  Particles.hs  Simple.hs
src/: Approx.hs  Classes.hs  Generators.hs  Mag.hs  Main.hs  Makefile  MeshStreaming.hs  MonteCarlo.hs  NormalizedValues.hs  NullStreaming.hs  NumUnit.hs  NumericClasses.hs  Numerics.hs  Primer.hs  Properties.hs  RandomNumbers.hs  RandomParticle.hs  RandomSamples.hs  RandomStreaming.hs  RandomValues.hs  Sampling.hs  SimpleRandom.hs  Space.hs  Space3DCartesian.hs  Stream.hs  Streaming.hs  Tallies.hs  TestSuite.hs  Vectors.hs  notes.org
src/Coordinate/: Cartesian.hs  Cartesian1D.hs  Classes.hs  Spherical1D.hs
src/Coordinate/Test/: Arbitrary.hs  Coordinate_test.hs  Space_arbitrary.hs
src/Events/: Event.hs
src/Mesh/: Arbitrary.hs  Cartesian1D.hs  Cartesian3D.hs  Classes.hs  Null.hs  Simple.hs  SimpleCartesian.hs  Spherical.hs  Tests.hs
src/Mesh/Test/: Cartesian3D_test.hs  Mesh_test.hs
src/MiniApp/: Application.hs  Events.hs  Main.hs  Model.hs  Outcome.hs  Particle.hs  Physics.hs  Tally.hs
src/Model/: Model.hs  Physical.hs
src/Particle/: BasicParticle.hs  Classes.hs  IndexedParticle.hs  Limited.hs  MeshedParticle.hs  Null.hs  ParametricParticle.hs  RandomParticle.hs  Simple.hs  SpaceParticle.hs
src/Particle/Test/: Arbitrary.hs  ArbitraryParticles.hs  BasicParticle_test.hs  ParametricParticle_test.hs  Particle_test.hs  Particles_arbitrary.hs  RandomParticle_test.hs  Space3DCartesian_arbitrary.hs
src/Space/: Cartesian.hs  Cartesian1D.hs  Classes.hs  Spherical1D.hs  Spherical1D2.hs
src/Space/Test/: Space_arbitrary.hs  Space_test.hs
src/SpaceTime/: Cart2D.hs  Cart3D.hs  Cartesian.hs  Classes.hs  Space3DCartesian.hs  Spherical1D.hs
src/SpaceTime/Test/: Cart3D_test.hs  Cartesian_arbitrary.hs  Cartesian_test.hs  Space3DCartesian_test.hs  Space_arbitrary.hs  Space_test.hs
src/SphericalApp/: Events.hs  Main.hs  Model.hs  Particle.hs  Physics.hs  Tally.hs
src/Test/: NormalizedValues_test.hs  NullStreaming.hs  Numeric_arbitrary.hs  RandomParticle_test.hs  RandomStreaming_test.hs  RandomValues_test.hs  SimpleRandom_test.hs  SimpleStreaming.hs  SimpleStreaming_test.hs  Stream_test.hs  Tally_test.hs  Vector_arbitrary.hs
src/Utils/: Combinators.hs  Finders.hs
src/attic/: RandomParticle.hs  RandomParticle_test.hs  RandomStreaming.hs  SimpleCartesian.hs  Space3DCartesian.hs  Space3DCartesian_arbitrary.hs  Space3DCartesian_test.hs
src/attic/Particles/: BasicParticle.hs  BasicParticle_test.hs  Classes.hs
src/scratch/: Normalized.hs  NormalizedClass.hs  NormalizedPhantom.hs  Status.hs  Unless.hs  Vectors.hs  arrays.hs
