name:                parallel-particle-mc
version:             0.0.1
cabal-version:       >= 1.6
synopsis:            FIXME: Parallel partcile-based Monte-Carlo simulations
description:
 FIXME: Parallel particle simulation (Monte-Carlo)
 parallel-particle-mc is a framework for executing a particle-based Monte Carlo simulations.
category:            Distributed Computing
license:             BSD3
license-file:        COPYRIGHT
copyright:           (c) 2010 Los Alamos National Security
author:              Michael Buksas, Tim Kelley
maintainer:          mwbuksas@lanl.gov
homepage:            http://software.lanl.gov/McPhD
build-type:          Simple
stability:           experimental
tested-with:         GHC==6.12.1

-- This makes haskell-mode happy
hs-source-dirs:      src  
-- extra-source-files:  README.txt

source-repository head
  type: hg
  location: https://software.lanl.gov/McPhD/hg/source

-- Note that default value is just a hint for "cabal", which could be
-- disregarded if there is a way to configure package WITHOUT the flag.
-- Therefore, users are required to run "cabal install -ftest" to get desired results.
flag test
  description: Build testsuite, code coverage tests etc
  default: True

-- Library
--    ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
--    hs-source-dirs:
--       src
--    build-depends:
--       base > 3 && <= 5,
--       AC-Vector == 2.3.1
--    exposed-modules:
--    other-modules:

executable  NullStreaming
  hs-source-dirs: ./src/Test/, ./src
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  other-modules:
    Particle.Null
    Mesh.Null
    Events.Event
    Stream
  main-is:       Test/NullStreaming.hs
  if flag(test)
    ghc-options: -fhpc
    build-depends: base >=3 && <=5, hpc, AC-Vector == 2.3.1
  else
    buildable: False

executable SimpleStremaing
  hs-source-dirs: ./src/Test/ ./src/ 
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  other-modules:
    Particle.Simple
    Mesh.SimpleCartesian
    Events.Event
    Stream
  main-is:       Test/SimpleStreaming.hs
  if flag(test)
    ghc-options: -fhpc
    build-depends: base >=3 && <=5, hpc, AC-Vector == 2.3.1
  else
    buildable: False

executable MeshTests
  hs-source-dirs: ./src/ ./src/Mesh/ 
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  other-modules:
    Mesh.SimpleCartesian
    Events.Event
    Stream
  main-is:       Tests.hs
  if flag(test)
    ghc-options: -fhpc
    build-depends: base >=3 && <=5, hpc, AC-Vector == 2.3.1, HUnit >= 1.2.2.1
  else
    buildable: False

executable SimpleRandom_test
  hs-source-dirs: ./src/Test ./src/ 
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  other-modules:
    SimpleRandom
    Space
  main-is: SimpleRandom_test.hs
  if flag(test)
    ghc-options: -fhpc
    build-depends: base >=3 && <=5, 
                   hpc, 
                   AC-Vector == 2.3.1, 
                   mersenne-random-pure64 >= 0.2.0.3, 
                   HUnit >= 1.2.2.1, 
                   test-framework-quickcheck,
                   test-framework-hunit,
                   test-framework,
                   QuickCheck
  else
    buildable: False
