name:                parallel-particle-mc
version:             0.0.1
cabal-version:       >= 1.6
synopsis:            FIXME: Parallel partcile-based Monte-Carlo simulations
description:
 FIXME: Parallel particle simulation (Monte-Carlo)
 parallel-particle-mc is a framework for executing a particle-based Monte Carlo simulations.
category:            Distributed Computing
license:             BSD3
license-file:        COPYRIGHT
copyright:           (c) 2010 Los Alamos National Security
author:              Michael Buksas, Tim Kelley
maintainer:          mwbuksas@lanl.gov
homepage:            http://software.lanl.gov/McPhD
build-type:          Simple
stability:           experimental
tested-with:         GHC==6.12.1
-- extra-source-files:  README.txt

source-repository head
  type: hg
  location: https://software.lanl.gov/McPhD/hg/source

-- Note that default value is just a hint for "cabal", which could be
-- disregarded if there is a way to configure package WITHOUT the flag.
-- Therefore, users are required to run "cabal install -ftest" to get desired results.
flag test
  description: Build testsuite, code coverage tests etc
  default: True

-- Library
--    ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
--    hs-source-dirs:
--       src
--    build-depends:
--       base > 3 && <= 5,
--       AC-Vector == 2.3.1
--    exposed-modules:
--    other-modules:

executable TestSuite
  hs-source-dirs: ./src/ ./src/Test
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  other-modules:
    Particle.Test.RandomParticle_test
    Test.RandomValues_test
    Mesh.Tests
  main-is: TestSuite.hs
  if flag(test)
    ghc-options: -fhpc
    build-depends: base >=3 && <=5, hpc, AC-Vector == 2.3.1, HUnit >= 1.2.2.1,
                   mersenne-random-pure64 >= 0.2.0.3,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   test-framework,
                   QuickCheck
  else
    buildable: False

