name:                parallel-particle-mc
version:             0.0.1
cabal-version:       >= 1.6
synopsis:            Parallel partcile-based Monte-Carlo simulations
description:
 Parallel particle simulation (Monte-Carlo)
 parallel-particle-mc is a framework for executing a particle-based Monte Carlo simulations.
category:            Distributed Computing
license:             BSD3
license-file:        COPYRIGHT
copyright:           (c) 2010 Los Alamos National Security
author:              Michael Buksas, Tim Kelley
maintainer:          mwbuksas@lanl.gov
homepage:            http://software.lanl.gov/McPhD
build-type:          Simple
stability:           experimental
tested-with:         GHC==6.12.3
-- extra-source-files:  README.txt

source-repository head
  type: hg
  location: https://software.lanl.gov/McPhD/hg/source

-- Note that default value is just a hint for "cabal", which could be
-- disregarded if there is a way to configure package WITHOUT the flag.
-- Therefore, users are required to run "cabal install -ftest" to get desired results.
flag test
  description: Build testsuite, code coverage tests etc
  default: True


Library
   ghc-options: -Wall -fwarn-tabs -fno-warn-name-shadowing -fno-warn-orphans
   hs-source-dirs:
      src
   build-depends:
      base > 3 && <= 6
      , AC-Vector == 2.3.1
      , QuickCheck
   exposed-modules: Approx, NormalizedValues, Numerics, Properties, Vectors
   exposed-modules: Generators, RandomNumbers, RandomSamples
   exposed-modules: Space.Classes, Space.Cartesian1D, Space.Cartesian, Space.Spherical1D
   exposed-modules: Mesh.Classes, Mesh.Cartesian1D, Mesh.Cartesian3D, Mesh.Spherical
   exposed-modules: Particle.MeshedParticle, Particle.SpaceParticle
   other-modules:


executable TestSuite
  hs-source-dirs: ./src/ ./src/Test
  ghc-options: -Wall -fwarn-tabs -fno-warn-name-shadowing -fno-warn-orphans
  ghc-options:  -rtsopts -threaded
  main-is: TestSuite.hs
  if flag(test)
    ghc-options: -fhpc
    build-depends: base >=3 && <=6
                   , random
                   , hpc
                   , AC-Vector == 2.*
                   , containers
                   , array == 0.3.*
                   , mersenne-random-pure64 == 0.2.*
                   , HUnit == 1.2.*
                   , test-framework-hunit
                   , test-framework-quickcheck2
                   , test-framework
                   , QuickCheck
  else
    buildable: False

-- executable MiniApp
--   hs-source-dirs: ./src ./src/MiniApp
--   ghc-options: -Wall -fwarn-tabs -fno-warn-name-shadowing -fno-warn-orphans
--   ghc-options: -rtsopts -threaded
--   main-is: MiniApp/Main.hs
--   build-depends: base >=3 && <=6
--                    , random
--                    , hpc
--                    , AC-Vector == 2.*
--                    , containers
--                    , array == 0.3.*
--                    , mersenne-random-pure64 == 0.2.*

executable SphericalApp
  hs-source-dirs: ./src ./src/SphericalApp
  ghc-options: -Wall -fwarn-tabs -fno-warn-name-shadowing -fno-warn-orphans
  ghc-options: -rtsopts -threaded
  main-is: SphericalApp/Main.hs
  build-depends: base >=3 && <=6
                   , random
                   , hpc
                   , AC-Vector == 2.*
                   , containers
                   , array == 0.3.*
                   , mersenne-random-pure64 == 0.2.*
