name:                basic
version:             0.1
cabal-version:       >= 1.10
synopsis:            Toy, 1D, spherical, MC transport code
description:         Tool for sketching out MC functionality
license:             BSD3
license-file:        COPYRIGHT
copyright:           (c) 2010 LANS, LLC
author:              T. M. Kelley
maintainer:          tkelley@lanl.gov
homepage:            http://software.lanl.gov/McPhD
build-type:          Simple
stability:           experimental

source-repository head
  type: hg
  location: https://software.lanl.gov/McPhD/hg/source/basic

library
  hs-source-dirs: src
  exposed-modules:   Cell
                     Constants
                     Collision
                     Event
                     FileInputCF
                     Geometry
                     Histogram
                     MC
                     Material
                     Mesh
                     Numerical
                     Opacity
                     PRNG
                     Particle
                     Physical
                     Search
                     Sigma_HBFC
                     SoftEquiv
                     Source
                     Sphere1D
                     -- System.Random.LFG
                     -- System.Random.LFG.Pure
                     Tally
                     TallyV
                     TallyIM
                     TryNSave
  ghc-options:       -Wall -fno-warn-name-shadowing -fno-warn-orphans -fwarn-tabs
  ghc-options:       -funbox-strict-fields
  ghc-options:       -rtsopts
  default-extensions:        CPP
  build-depends:     base >=4 && <=5,
                     vector >= 0.7,
                     random >= 1,
                     mtl >= 1,
                     deepseq >= 1,
                     parallel >= 3.1,
                     csv >= 0.1.2,
                     mwc-random,
                     QuickCheck >= 2
                   , containers >= 0.4.0.0
                   , unordered-containers >= 0.1.4.3
                   , primitive
                   , bytestring
                   , bytestring-lexing
                   , vector-th-unbox

  default-language:  Haskell2010

executable  black-hole
  hs-source-dirs:    src-main
  ghc-options:       -Wall -fno-warn-name-shadowing -fno-warn-orphans -fwarn-tabs
  ghc-options:       -funbox-strict-fields
  ghc-options:       -rtsopts
  main-is:           BH.hs
  build-depends:     base >=4 && <=5,
                     vector >= 0.7,
                     parallel >= 3.1,
                     filepath >= 1.2.0,
                     basic
  default-language:  Haskell2010

executable  basic-test
  hs-source-dirs:    tests
  ghc-options:       -Wall -fno-warn-name-shadowing -fno-warn-orphans -fwarn-tabs
  ghc-options:       -rtsopts
  main-is:           TestSuite.hs
  build-depends:     base >=4 && <=5,
                     vector >= 0.7,
                     QuickCheck >= 2,
                     HUnit,
                     test-framework-quickcheck2,
                     test-framework-hunit,
                     test-framework,
                     basic
  default-language:  Haskell2010
