name:                basic
version:             0.1
cabal-version:       >= 1.10
synopsis:            Monte Carlo neutrino transport simulation
description:         Monte Carlo neutrino transport simulation. Restricted to 1D, spherical geometry. Particles tracked in lab frame; collisions computed in comoving (material) frame. Uses opacities based on analytic cross sections from Herant, Benz, Fryer, and Colgate (Ap J 1994). Tallies energy and momentum deposition per cell (spherical shell), counts MC events, and histograms escaped particles.
license:             BSD3
license-file:        COPYRIGHT
copyright:           (c) 2010 LANS, LLC
author:              T. M. Kelley
maintainer:          tkelley at lanl dt gov
homepage:            http://software.lanl.gov/McPhD
build-type:          Simple
stability:           experimental

source-repository head
  type: hg
  location: https://software.lanl.gov/McPhD/hg/source/basic

Flag MPI
  description: Use MPI distribute parallelism
  Default: False

library
  hs-source-dirs: src
  exposed-modules:   Cell
                     Constants
                     Collision
                     Event
                     FileInputCF
                     Geometry
                     Histogram
                     MC
                     Material
                     Mesh
                     MPIStub
                     MPIFull
                     MPISwitch
                     Numerical
                     Opacity
                     PRNG
                     Particle
                     Partition
                     Philo2
                     Physical
                     Search
                     Sigma_HBFC
                     SoftEquiv
                     Source
                     Sphere1D
                     Tally
                     TallyV
                     TallyIM
                     TryNSave
                     Utils
  ghc-options:       -Wall -fno-warn-name-shadowing -fno-warn-orphans -fwarn-tabs
  ghc-options:       -funbox-strict-fields -fno-ignore-asserts
  default-extensions:        CPP
  if flag(mpi)
      cpp-options:       -DUseMPI
  build-depends:     base >= 4.5 && <=5,
                     vector >= 0.7,
                     random >= 1.0.1,
                     mtl >= 1,
                     deepseq >= 1,
                     parallel >= 3.1,
                     csv >= 0.1.2,
                     mwc-random,
                     QuickCheck >= 2
                   , containers >= 0.4.0.0
                   , unordered-containers >= 0.1.4.3
                   , primitive
                   , bytestring
                   , bytestring-lexing
                   , cereal
                   , haskell-mpi
                   , time
                   , vector-th-unbox

  default-language:  Haskell2010

executable  black-hole
  hs-source-dirs:    src-main
  ghc-options:       -Wall -fno-warn-name-shadowing -fno-warn-orphans -fwarn-tabs
  ghc-options:       -funbox-strict-fields
  ghc-options:       -rtsopts
  default-extensions:        CPP
  if flag(mpi)
      cpp-options:       -DUseMPI
  main-is:           BH-philox.hs
  build-depends:     base >=4 && <=5
                    ,vector >= 0.7
                    ,parallel >= 3.1
                    ,filepath >= 1.2.0
                    ,deepseq
                    ,basic
                    ,monad-par
                    ,haskell-mpi
                    ,cereal
  default-language:  Haskell2010

-- executable  black-hole-mpi
--   hs-source-dirs:    src-main
--   ghc-options:       -Wall -fno-warn-name-shadowing -fno-warn-orphans -fwarn-tabs
--   ghc-options:       -funbox-strict-fields
--   ghc-options:       -rtsopts
--   default-extensions:        CPP
--   main-is:           BH-philox.hs
--   build-depends:     base >=4 && <=5
--                     ,vector >= 0.7
--                     ,parallel >= 3.1
--                     ,filepath >= 1.2.0
--                     ,deepseq
--                     ,basic
--                     ,monad-par
--                     ,haskell-mpi
--                     ,cereal
--   default-language:  Haskell2010

executable  basic-test
  hs-source-dirs:    tests
  ghc-options:       -Wall -fno-warn-name-shadowing -fno-warn-orphans -fwarn-tabs
  ghc-options:       -rtsopts
  main-is:           TestSuite.hs
  build-depends:     base >=4 && <=5,
                     vector >= 0.7,
                     QuickCheck >= 2,
                     HUnit,
                     test-framework-quickcheck2,
                     test-framework-hunit,
                     test-framework,
                     unordered-containers >= 0.1.4.3,
                     basic
                   , cereal

  default-language:  Haskell2010
